# mefdia-forge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  СБОРКА-WINDOWS.md
.claude/: launch.json
.github/workflows/: build.yml
dist-installer/: УСТАНОВКА.md
scripts/: build-dmg.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: files.rs  mod.rs  queue.rs  settings.rs
src-tauri/src/ffmpeg/: binary.rs  mod.rs  probe.rs  progress.rs  runner.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/tasks/: mod.rs  types.rs
src-tauri/src/tasks/ops/: bitrate.rs  compress.rs  convert_audio.rs  convert_video.rs  encode.rs  extract_frames.rs  fps.rs  gif.rs  image.rs  merge.rs  mod.rs  resolution.rs  rotate.rs  speed.rs  trim.rs  video_note.rs  voice.rs
src-tauri/src/utils/: mod.rs
src/api/: tauri.ts  types.ts
src/components/actions/: ActionCard.tsx  ActionCards.tsx  ActionsPanel.tsx  PanelHeader.tsx
src/components/common/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Field.tsx  SegmentedControl.tsx  Toast.tsx
src/components/files/: FileList.tsx  (+1 more)
src/lib/: operations.ts  queueHelpers.ts
src/store/: useFilesStore.ts  useQueueStore.ts  useSettingsStore.ts  useToastStore.ts
src/styles/: globals.css
(+12 files in other folders)
